# kanichannel

./: .gitignore  Cargo.toml  aaa.sqlite3  config.json5
bbsctl/: Cargo.toml
bbsctl/src/: main.rs
bbsctl/src/board/: create.rs  edit.rs  mod.rs  remove.rs
bbsctl/src/post/: remove.rs
bbsctl/src/thread/: mod.rs  remove.rs
entity/: Cargo.toml
entity/src/: board.rs  lib.rs  post.rs  prelude.rs  thread.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240103_004018_init.rs
src/: main.rs
src/endpoints/: bbs.rs  dat.rs  mod.rs  subject.rs
src/endpoints/bbs/: command.rs  do_post.rs  mod.rs
src/postgres/: connect.rs  init.rs  mod.rs
src/utils/: mod.rs
