[workspace]
members = [".", "entity", "migration", "bbsctl"]

[package]
name = "kanichannel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "entity" }
sea-orm = { version = "0.12", features = [
    "sqlx-mysql",
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }

mimalloc = { version = "0.1", default-features = false }

serde = { version = "1", features = ["derive", "alloc", "rc"] }
json5 = "0.4"

tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["http2", "multipart", "ws"] }

encoding_rs = "0.8"
chrono = "0.4"
regex = "1"
rand = "0.8"
sha3 = "0.10"
base-62 = "0.1"
percent-encoding = "2"
serde_urlencoded = "0.7"
