[package]
name = "bbsctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
sea-orm = { version = "0.12", features = [
    "sqlx-mysql",
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }

tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive", "alloc", "rc"] }
json5 = "0.4"

once_cell = "1"
